change font size

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 </head>
 
 <body class="container">
+
+    <div class="navbar">
+        <div class="btn-group">
+            <button onclick="biggerText()">بزرگتر</button>
+            <button onclick="smallerText()">کوچکتر</button>
+        </div>
+    </div>
+
     <h1>تحلیل تکنیکال</h1>
     <a href="candlestick/index.html">
         <h2>الگوهای کندل استیک ها</h2>
@@ -19,6 +27,10 @@
     <a href="indicators/index.html">
         <h2>اندیکاتورها</h2>
     </a>
+
+    <p id="content" style="font-size: 1rem;">سلام</p>
+
+    <script src="assets/script.js"></script>
 </body>
 
 </html>
