--- a/indicators/index.html
+++ b/indicators/index.html
@@ -9,10 +9,20 @@
 </head>
 
 <body class="container">
+
+    <div class="navbar">
+        <div class="btn-group">
+            <button onclick="biggerText()">بزرگتر</button>
+            <button onclick="smallerText()">کوچکتر</button>
+        </div>
+    </div>
+
     <a href="../index.html">
         <h1>تحلیل تکنیکال</h1>
     </a>
     <h2>اندیکاتورها</h2>
+
+    <script src="../assets/script.js"></script>
 </body>
 
 </html>
