sample data added

--- a/candlestick/index.html
+++ b/candlestick/index.html
@@ -12,8 +12,8 @@
 
     <div class="navbar">
         <div class="btn-group">
-            <button onclick="biggerText()">بزرگتر</button>
-            <button onclick="smallerText()">کوچکتر</button>
+            <button onclick="biggerText()">بزرگ‌تر</button>
+            <button onclick="smallerText()">کوچک‌تر</button>
         </div>
     </div>
 
@@ -21,6 +21,39 @@
         <h1>تحلیل تکنیکال</h1>
     </a>
     <h2>الگوهای کندل استیک ها</h2>
+
+    <div class="table">
+        <div class="item">
+            <a href="hammer/index.html">
+                <h3>Hammer</h3>
+                <img src="hammer/hammer1.png" alt="Hammer Pattern">
+            </a>
+        </div>
+        <div class="item">
+            <a href="inverted-hammer/index.html">
+                <h3>Inverted Hammer</h3>
+                <img src="inverted-hammer/inverted-hammer1.png" alt="Inverted Hammer Pattern">
+            </a>
+        </div>
+        <div class="item">
+            <a href="bullish-belt-hold/index.html">
+                <h3>Bullish Belt Hold</h3>
+                <img src="bullish-belt-hold/bullish-belt-hold1.png" alt="Bullish Belt Hold Pattern">
+            </a>
+        </div>
+        <div class="item">
+            <a href="bullish-engulifing/index.html">
+                <h3>Bullish Engulfing</h3>
+                <img src="bullish-engulifing/bullish-engulifing1.png" alt="Bullish Engulfing Pattern">
+            </a>
+        </div>
+        <div class="item">
+            <a href="tweezers-bottom/index.html">
+                <h3>Tweezers Bottom</h3>
+                <img src="tweezers-bottom/tweezers-bottom1.png" alt="Tweezers Bottom Pattern">
+            </a>
+        </div>
+    </div>
 
     <script src="../assets/script.js"></script>
 </body>
