--- a/chart/index.html
+++ b/chart/index.html
@@ -12,8 +12,8 @@
 
     <div class="navbar">
         <div class="btn-group">
-            <button onclick="biggerText()">بزرگتر</button>
-            <button onclick="smallerText()">کوچکتر</button>
+            <button onclick="biggerText()">بزرگ‌تر</button>
+            <button onclick="smallerText()">کوچک‌تر</button>
         </div>
     </div>
 
