--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <div class="navbar">
         <div class="btn-group">
-            <button onclick="biggerText()">بزرگتر</button>
-            <button onclick="smallerText()">کوچکتر</button>
+            <button onclick="biggerText()">بزرگ‌تر</button>
+            <button onclick="smallerText()">کوچک‌تر</button>
         </div>
     </div>
 
@@ -27,8 +27,6 @@
     <a href="indicators/index.html">
         <h2>اندیکاتورها</h2>
     </a>
-
-    <p id="content" style="font-size: 1rem;">سلام</p>
 
     <script src="assets/script.js"></script>
 </body>
