candlestick content updated

--- a/candlestick/bullish-abandoned-baby/index.html
+++ b/candlestick/bullish-abandoned-baby/index.html
@@ -25,15 +25,16 @@
     </a>
 
     <div class="item">
-        <h3>Hammer</h3>
-        <img src="hammer1.png" alt="Hammer Pattern">
+        <h3>Bullish Abandoned Baby</h3>
+        <img src="bullish-abandoned-baby1.png" alt="Bullish Abandoned Baby Pattern">
     </div>
-    <!-- <br> -->
+    <br>
 
     <div id="content">
-        الگوي چکش (الگوي هامر Hammer) در انتهاي یک روند نزولی تشکیل می شود از خصوصیات این الگو سایه پایینی بلند،
-        سایه بالایی کوتاه (وجود نداشتن سایه بالایی) و بدنه اي حداکثر یک دوم سایه پایینی می باشد. در این الگو رنگ بدنه تفاوتی
-        ندارد اما بدنه صعودي (سفید) قدرت بیشتر این الگو را براي بازگشت روند نشان می دهد.
+        این الگو (کودك رها شده صعودي) در بازار فارکس خیلی کم به وجود می آید. در انتهاي روند نزولی پس از یک شمع نزولی
+        قوي شکافی نزولی تا شمع بعدي بوجود می آید شمع بعدي بصورت ستاره (داجی) بسته می شود و فاصله بسته شدنش تا
+        شمع بعدي نیز داراي شکاف است. با سفید (صعودي) بسته شدن بدنه شمع سوم اخطار پایان روند نزولی و آغاز روند صعودي
+        به وجود می آید.
     </div>
 
     <script src="../../assets/script.js"></script>
