--- a/candlestick/bullish-harami-cross/index.html
+++ b/candlestick/bullish-harami-cross/index.html
@@ -25,15 +25,14 @@
     </a>
 
     <div class="item">
-        <h3>Hammer</h3>
-        <img src="hammer1.png" alt="Hammer Pattern">
+        <h3>Bullish Harami Cross</h3>
+        <img src="bullish-harami-cross1.png" alt="Bullish Harami Cross Pattern">
     </div>
-    <!-- <br> -->
+    <br>
 
     <div id="content">
-        الگوي چکش (الگوي هامر Hammer) در انتهاي یک روند نزولی تشکیل می شود از خصوصیات این الگو سایه پایینی بلند،
-        سایه بالایی کوتاه (وجود نداشتن سایه بالایی) و بدنه اي حداکثر یک دوم سایه پایینی می باشد. در این الگو رنگ بدنه تفاوتی
-        ندارد اما بدنه صعودي (سفید) قدرت بیشتر این الگو را براي بازگشت روند نشان می دهد.
+        صلیب هارامی صعودي (هارامی کراس) شباهت بسیاري به الگوي قبلی دارد با این تفاوت که بدنه شمع دوم حتما بصورت
+        داجی (ستاره) تشکیل شده است این الگو در انتهاي روند نزولی تشکیل می شود و اخطار تغییر روند را صادر می کند.
     </div>
 
     <script src="../../assets/script.js"></script>
