--- a/candlestick/bullish-harami/index.html
+++ b/candlestick/bullish-harami/index.html
@@ -25,15 +25,15 @@
     </a>
 
     <div class="item">
-        <h3>Hammer</h3>
-        <img src="hammer1.png" alt="Hammer Pattern">
+        <h3>Bullish Harami</h3>
+        <img src="bullish-harami1.png" alt="Bullish Harami Pattern">
     </div>
-    <!-- <br> -->
+    <br>
 
     <div id="content">
-        الگوي چکش (الگوي هامر Hammer) در انتهاي یک روند نزولی تشکیل می شود از خصوصیات این الگو سایه پایینی بلند،
-        سایه بالایی کوتاه (وجود نداشتن سایه بالایی) و بدنه اي حداکثر یک دوم سایه پایینی می باشد. در این الگو رنگ بدنه تفاوتی
-        ندارد اما بدنه صعودي (سفید) قدرت بیشتر این الگو را براي بازگشت روند نشان می دهد.
+        الگوي هارامی صعودي نیز در انتهاي روند نزولی تشکیل می شود و اخطار تغییر روند را صادر می کند. شمع اول بدنه مشکی
+        (نزولی) دارد که تمامی بدنه شمع دوم را پوشش می دهد سایه ها در این الگو اهمیت زیادي ندارند اما خارج نشدن سایه هاي
+        شمع دوم از محدوده سایه هاي شمع اول قدرت بیشتر این الگو را نشان می دهد.
     </div>
 
     <script src="../../assets/script.js"></script>
