--- a/candlestick/bullish-piercing-line/index.html
+++ b/candlestick/bullish-piercing-line/index.html
@@ -25,15 +25,16 @@
     </a>
 
     <div class="item">
-        <h3>Hammer</h3>
-        <img src="hammer1.png" alt="Hammer Pattern">
+        <h3>Bullish Piercing Line</h3>
+        <img src="bullish-piercing-line1.png" alt="Bullish Piercing Line Pattern">
     </div>
-    <!-- <br> -->
+    <br>
 
     <div id="content">
-        الگوي چکش (الگوي هامر Hammer) در انتهاي یک روند نزولی تشکیل می شود از خصوصیات این الگو سایه پایینی بلند،
-        سایه بالایی کوتاه (وجود نداشتن سایه بالایی) و بدنه اي حداکثر یک دوم سایه پایینی می باشد. در این الگو رنگ بدنه تفاوتی
-        ندارد اما بدنه صعودي (سفید) قدرت بیشتر این الگو را براي بازگشت روند نشان می دهد.
+        در این الگو (پوشش شکاف صعودي) شاهد دو شمع با رنگ هاي متفاوت هستیم. در شمع اول بدنه مشکی (نزولی) و شمع
+        دوم بدنه اي سفید (صعودي) با نقطه پایانی پایین تر از نقطه آغازین شمع قبلی می بینیم و نقطه آغاز شمع دوم با شکافی
+        نزولی نسبت به پایان شمع اول شروع شده است. این الگو در انتهاي روند نزولی تشکیل شده و نمایشگر آغاز روند صعودي می
+        باشد.
     </div>
 
     <script src="../../assets/script.js"></script>
