--- a/candlestick/bullish-tri-star/index.html
+++ b/candlestick/bullish-tri-star/index.html
@@ -25,15 +25,15 @@
     </a>
 
     <div class="item">
-        <h3>Hammer</h3>
-        <img src="hammer1.png" alt="Hammer Pattern">
+        <h3>Bullish Tri-Star</h3>
+        <img src="bullish-tri-star1.png" alt="Bullish Tri-Star Pattern">
     </div>
-    <!-- <br> -->
+    <br>
 
     <div id="content">
-        الگوي چکش (الگوي هامر Hammer) در انتهاي یک روند نزولی تشکیل می شود از خصوصیات این الگو سایه پایینی بلند،
-        سایه بالایی کوتاه (وجود نداشتن سایه بالایی) و بدنه اي حداکثر یک دوم سایه پایینی می باشد. در این الگو رنگ بدنه تفاوتی
-        ندارد اما بدنه صعودي (سفید) قدرت بیشتر این الگو را براي بازگشت روند نشان می دهد.
+        الگوي سه ستاره صعودي از ترکیب سه شمع Doji مانند تشکیل شده اندازه سایه ها در این سه شمع حائز اهمیت نمی باشد
+        اما وجود شکاف (گپ) نزولی بین شمع اول و دوم و شکاف صعودي بین شمع دوم و سوم بر قدرت این الگو براي تغییر روند از
+        نزولی به صعودي می افزاید.
     </div>
 
     <script src="../../assets/script.js"></script>
