--- a/candlestick/index.html
+++ b/candlestick/index.html
@@ -22,7 +22,7 @@
     </a>
     <h2>الگوهای کندل استیک ها</h2>
 
-    <div class="table">
+    <div id="content" class="table">
         <div class="item">
             <a href="hammer/index.html">
                 <h3>Hammer</h3>
@@ -51,6 +51,54 @@
             <a href="tweezers-bottom/index.html">
                 <h3>Tweezers Bottom</h3>
                 <img src="tweezers-bottom/tweezers-bottom1.png" alt="Tweezers Bottom Pattern">
+            </a>
+        </div>
+        <div class="item">
+            <a href="bullish-harami/index.html">
+                <h3>Bullish Harami</h3>
+                <img src="bullish-harami/bullish-harami1.png" alt="Bullish Harami Pattern">
+            </a>
+        </div>
+        <div class="item">
+            <a href="bullish-harami-cross/index.html">
+                <h3>Bullish Harami Cross</h3>
+                <img src="bullish-harami-cross/bullish-harami-cross1.png" alt="Bullish Harami Cross Pattern">
+            </a>
+        </div>
+        <div class="item">
+            <a href="bullish-piercing-line/index.html">
+                <h3>Bullish Piercing Line</h3>
+                <img src="bullish-piercing-line/bullish-piercing-line1.png" alt="Bullish Piercing Line Pattern">
+            </a>
+        </div>
+        <div class="item">
+            <a href="bullish-abandoned-baby/index.html">
+                <h3>Bullish Abandoned Baby</h3>
+                <img src="bullish-abandoned-baby/bullish-abandoned-baby1.png" alt="Bullish Abandoned Baby Pattern">
+            </a>
+        </div>
+        <div class="item">
+            <a href="morning-star/index.html">
+                <h3>Morning Star</h3>
+                <img src="morning-star/morning-star1.png" alt="Morning Star Pattern">
+            </a>
+        </div>
+        <div class="item">
+            <a href="morning-doji-star/index.html">
+                <h3>Morning Doji Star</h3>
+                <img src="morning-doji-star/morning-doji-star1.png" alt="Morning Doji Star Pattern">
+            </a>
+        </div>
+        <div class="item">
+            <a href="bullish-tri-star/index.html">
+                <h3>Bullish Tri-Star</h3>
+                <img src="bullish-tri-star/bullish-tri-star1.png" alt="Bullish Tri-Star Pattern">
+            </a>
+        </div>
+        <div class="item">
+            <a href="three-white-soldiers/index.html">
+                <h3>Three White Soldiers</h3>
+                <img src="three-white-soldiers/three-white-soldiers1.png" alt="Three White Soldiers Pattern">
             </a>
         </div>
     </div>
