--- a/candlestick/morning-star/index.html
+++ b/candlestick/morning-star/index.html
@@ -25,15 +25,16 @@
     </a>
 
     <div class="item">
-        <h3>Hammer</h3>
-        <img src="hammer1.png" alt="Hammer Pattern">
+        <h3>Morning Star</h3>
+        <img src="morning-star1.png" alt="Morning Star Pattern">
     </div>
-    <!-- <br> -->
+    <br>
 
     <div id="content">
-        الگوي چکش (الگوي هامر Hammer) در انتهاي یک روند نزولی تشکیل می شود از خصوصیات این الگو سایه پایینی بلند،
-        سایه بالایی کوتاه (وجود نداشتن سایه بالایی) و بدنه اي حداکثر یک دوم سایه پایینی می باشد. در این الگو رنگ بدنه تفاوتی
-        ندارد اما بدنه صعودي (سفید) قدرت بیشتر این الگو را براي بازگشت روند نشان می دهد.
+        الگوي ستاره صبحگاهی از مجموع سه شمع در انتهاي روند نزولی تشکیل می شود شمع اول نزولی و پرقدرت، شمع دوم با
+        شکاف (گپ) نزولی آغاز شده و بدنه آن میتواند نزولی یا صعودي باشد ولی در غالب موارد بدنه و سایه هاي بزرگی ندارد و
+        شمع سوم یک شمع صعودي است که آغاز آن با شکاف (گپ) صعودي نسبت به شمع دوم آغاز شده است. این سه شمع
+        اخطار روند صعودي را در انتهاي روند نزولی اعلام می نمایند.
     </div>
 
     <script src="../../assets/script.js"></script>
