--- a/candlestick/three-white-soldiers/index.html
+++ b/candlestick/three-white-soldiers/index.html
@@ -25,15 +25,15 @@
     </a>
 
     <div class="item">
-        <h3>Hammer</h3>
-        <img src="hammer1.png" alt="Hammer Pattern">
+        <h3>Three White Soldiers</h3>
+        <img src="three-white-soldiers1.png" alt="Three White Soldiers Pattern">
     </div>
-    <!-- <br> -->
+    <br>
 
     <div id="content">
-        الگوي چکش (الگوي هامر Hammer) در انتهاي یک روند نزولی تشکیل می شود از خصوصیات این الگو سایه پایینی بلند،
-        سایه بالایی کوتاه (وجود نداشتن سایه بالایی) و بدنه اي حداکثر یک دوم سایه پایینی می باشد. در این الگو رنگ بدنه تفاوتی
-        ندارد اما بدنه صعودي (سفید) قدرت بیشتر این الگو را براي بازگشت روند نشان می دهد.
+        الگوي سه مکعب سفید از سه شمع صعودي با بدنه هاي توخالی و صعودي قوي تشکیل شده است.سایه ها غالبا کوتاه و ایجاد
+        شکاف نزولی بین شمع اول، دوم و شکاف نزولی بین شمع دوم و سوم وجود دارد. با بسته شدن شمع سوم اخطار قوي تغییر
+        روند از نزولی به صعودي ایجاد می شود.
     </div>
 
     <script src="../../assets/script.js"></script>
