--- a/candlestick/morning-doji-star/index.html
+++ b/candlestick/morning-doji-star/index.html
@@ -25,15 +25,15 @@
     </a>
 
     <div class="item">
-        <h3>Hammer</h3>
-        <img src="hammer1.png" alt="Hammer Pattern">
+        <h3>Morning Doji Star</h3>
+        <img src="morning-doji-star1.png" alt="Morning Doji Star Pattern">
     </div>
-    <!-- <br> -->
+    <br>
 
     <div id="content">
-        الگوي چکش (الگوي هامر Hammer) در انتهاي یک روند نزولی تشکیل می شود از خصوصیات این الگو سایه پایینی بلند،
-        سایه بالایی کوتاه (وجود نداشتن سایه بالایی) و بدنه اي حداکثر یک دوم سایه پایینی می باشد. در این الگو رنگ بدنه تفاوتی
-        ندارد اما بدنه صعودي (سفید) قدرت بیشتر این الگو را براي بازگشت روند نشان می دهد.
+        ترکیب این الگوي سه شمعی بسیار شبیه به الگوي ستاره صبحگاهی می باشد با این تفاوت که بین شمع اول و دوم به علاوه
+        بین شمع دوم و سوم شکافی دیده نمی شود شمع اول پرقدرت و نزولی، شمع دوم دوجی Doji و شمع سوم داراي بدنه
+        صعودي می باشد. با بسته شدن صعودي شمع سوم اخطار انتهاي روند نزولی و آغاز روند صعودي اعلام می شود.
     </div>
 
     <script src="../../assets/script.js"></script>
